--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-# Welcome to Alloy Titanium form generator.
+Welcome to TiForm generator
+=========
 
-This js file will helps you to generate a custom or regular form for you application. 
+This js file will helps you to generate a custom form for your mobile app aplications.
